# speechify-add

./: README.md  pyproject.toml
docs/: design.md
speechify_add/: __init__.py  api.py  auth.py  browser.py  cli.py  config.py  file_upload_live_test.py  file_upload_test.py  tab_registry.py  tab_registry_test.py  verify.py
tests/: conftest.py  test_api.py  test_api_live.py  test_auth.py  test_auth_live.py  test_browser.py  test_browser_live.py  test_cli.py  test_cli_live.py  test_config.py  test_config_live.py  test_pure_logic.py  test_verify.py  test_verify_live.py
