[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speechify-add"
version = "0.1.0"
description = "CLI tool for adding articles to your Speechify listening queue"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "playwright>=1.44",
    "pyjwt>=2.8",
]

[project.scripts]
speechify-add = "speechify_add.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["speechify_add*"]
